# Depo_Raf_Yerlesimi-Algoritma_Projesi

./: .gitignore  CMakeLists.txt  README.md  main.cpp
algorithm/: WarehouseAlgorithms.cpp  WarehouseAlgorithms.h
model/: Product.h  Shelf.h
ui/: MainWindow.cpp  MainWindow.h
